Ajout de la classe Dns avec gestion du fichier, recherche par nom/IP, liste domaine, ajout avec mise à jour fichier