@@ -1,38 +1,73 @@
 package fr.uvsq.cprog.collex;
 
-import java.io.BufferedReader;
-import java.io.FileReader;
 import java.io.IOException;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Dns {
     private final List<DnsItem> items = new ArrayList<>();
-    private final String filename;
+    private final Path fichier;
 
-    public Dns(String filename) {
-        this.filename = filename;
-
-        try (BufferedReader br = new BufferedReader(new FileReader(filename))) {
-            String line;
-            while ((line = br.readLine()) != null) {
-                String[] parts = line.trim().split("\\s+");
-                if (parts.length == 2) {
-                    String nom = parts[0];
-                    String ip = parts[1];
-                    DnsItem item = new DnsItem(nom, ip);
-                    items.add(item);
-                }
+    public Dns(String filename) throws IOException {
+        this.fichier = Path.of(filename);
+        List<String> lignes = Files.readAllLines(fichier);
+        for (String ligne : lignes) {
+            String[] parts = ligne.trim().split("\\s+");
+            if (parts.length == 2) {
+                String nom = parts[0];
+                String ip = parts[1];
+                items.add(new DnsItem(nom, ip));
             }
-        } catch (IOException e) {
-            System.out.println("Erreur lors de la lecture du fichier : " + e.getMessage());
         }
     }
 
+    public DnsItem getItemParNom(String nomQualifie) {
+        for (DnsItem item : items) {
+            if (item.getNom().equals(nomQualifie)) {
+                return item;
+            }
+        }
+        return null;
+    }
+
+    public DnsItem getItemParIP(String ip) {
+        for (DnsItem item : items) {
+            if (item.getAdresseIP().equals(ip)) {
+                return item;
+            }
+        }
+        return null;
+    }
+
+    /**
+     * Renvoie la liste des DnsItem d'un domaine donné.
+     * @param domaine ex: uvsq.fr
+     * @param triParIP true pour trier par adresse IP, false pour trier par nom
+     * @return liste triée
+     */
+    public List<DnsItem> getItemsParDomaine(String domaine, boolean triParIP) {
+        List<DnsItem> result = items.stream()
+            .filter(item -> item.getNom().endsWith("." + domaine))
+            .collect(Collectors.toList());
+
+        Comparator<DnsItem> comparateur = triParIP
+            ? Comparator.comparing(DnsItem::getAdresseIP)
+            : Comparator.comparing(DnsItem::getNom);
+
+        result.sort(comparateur);
+        return result;
+    }
+
+    /**
+     * Ajoute un DnsItem et met à jour le fichier.
+     * @throws Exception si nom ou IP existe déjà
+     */
     public void addItem(String ip, String nom) throws Exception {
-        // Vérifie si l’adresse ou le nom existe déjà
         for (DnsItem item : items) {
             if (item.getNom().equals(nom)) {
                 throw new Exception("Le nom de machine existe déjà !");
@@ -42,33 +77,14 @@ public class Dns {
             }
         }
 
-        // Ajoute l’élément à la liste
         DnsItem newItem = new DnsItem(nom, ip);
         items.add(newItem);
 
-        // Met à jour le fichier
+        String ligne = nom + " " + ip + System.lineSeparator();
         try {
-            String ligne = nom + " " + ip + System.lineSeparator();
-            Files.write(Paths.get(filename),
-                        ligne.getBytes(),
-                        StandardOpenOption.APPEND);
+            Files.writeString(fichier, ligne, StandardOpenOption.APPEND);
         } catch (IOException e) {
             throw new Exception("Erreur lors de l'écriture dans le fichier : " + e.getMessage());
         }
-    }
-
-    public void afficheTout() {
-        for (DnsItem item : items) {
-            System.out.println(item);
-        }
-    }
-
-    public DnsItem getItem(String nomQualifie) {
-        for (DnsItem item : items) {
-            if (item.getNom().equals(nomQualifie)) {
-                return item;
-            }
-        }
-        return null;
     }
 }
